# genagents_simulation

./: GENAGENTS.md  README.md  llama.py  pyproject.toml  requirements.txt
agent_template/: component.yaml  run.py  schemas.py
agent_template/configs/: agent_deployments.json
genagents-simulation/agent_bank/populations/gss_agents/0023952f-142e-434b-82e2-7a7451b7c55f/: meta.json
genagents-simulation/agent_bank/populations/gss_agents/0071de46-9581-4a26-b572-9131d57a8c8d/: meta.json  scratch.json
genagents-simulation/agent_bank/populations/gss_agents/00797edb-673d-4e28-a974-cfba2dc047d4/: meta.json
genagents-simulation/agent_bank/populations/gss_agents/00813eae-1e94-4d7d-b209-642455325239/: meta.json  scratch.json
genagents-simulation/configs/: environment_deployments.json
genagents-simulation/genagents/: knowledge.md
genagents_simulation/: main.py  run.py  schemas.py
genagents_simulation/configs/: agent_deployments.json  deployment.json
genagents_simulation/genagents/: genagents.py
genagents_simulation/genagents/modules/: interaction.py  memory_stream.py
genagents_simulation/simulation_engine/: example-settings.py  global_methods.py  gpt_structure.py  settings.py
interview/: run.py
module_template/: .env.example  main.py  run.py  schemas.py
module_template/configs/: orchestrator_deployments.json
module_template/genagents/: genagents.py
module_template/genagents/modules/: interaction.py  memory_stream.py
module_template/simulation_engine/: gpt_structure.py  knowledge.md
tests/: test_agent.py
(+7009 files in other folders)
