[tool.poetry]
name = "genagents_simulation"
version = "0.1.0"
description = ""
authors = ["Richard Blythman <richardblythman@gmail.com>"]
readme = "README.md"
packages = [
    {include = "genagents_simulation", from="."}
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk.git"}
python-dotenv = "1.0.1"
numpy = "1.26.2"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
certifi = "2024.8.30"
distro = "1.9.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.27.2"
idna = "3.10"
openai = "1.6.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
sniffio = "1.3.1"
tqdm = "4.67.0"
typing-extensions = "4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
